Dumper model defined

--- a/index.html
+++ b/index.html
@@ -136,24 +136,6 @@
         </div>
       </div>
 
-      <!-- <div class="card live-dumper">
-        <p>EAST DUMPERS</p>
-        <table>
-          <tr>
-            <td>Avl</td>
-            <td> <button ng-click="dumperCounter(1)">-</button></td>
-            <td class="dumper-counter">{{dumper.east_avl}}</td>
-            <td><button ng-click="dumperCounter(2)">+</button></td>
-          </tr>
-          <tr>
-            <td>Run</td>
-            <td><button ng-click="dumperCounter(3)">-</button></td>
-            <td class="dumper-counter">{{dumper.east_run}}</td>
-            <td><button ng-click="dumperCounter(4)">+</button></td>
-          </tr>
-        </table>
-      </div>
-
       <div class="card live-dumper">
         <p>EAST DUMPERS</p>
         <table>
@@ -161,38 +143,23 @@
             <td>Avl</td>
             <td> <button ng-click="eastDumper.change(1)">-</button></td>
             <td class="dumper-counter">{{eastDumper.avl}}</td>
-            <td> <button ng-click="eastDumper.change(2)">-</button></td>
+            <td> <button ng-click="eastDumper.change(2)">+</button></td>
           </tr>
           <tr>
             <td>Run</td>
             <td> <button ng-click="eastDumper.change(3)">-</button></td>
             <td class="dumper-counter">{{eastDumper.run}}</td>
-            <td> <button ng-click="eastDumper.change(4)">-</button></td>
+            <td> <button ng-click="eastDumper.change(4)">+</button></td>
           </tr>
         </table>
       </div>
 
-      <div class="card live-dumper">
-        <p>WEST DUMPERS</p>
-        <table>
-          <tr>
-            <td>Avl</td>
-            <td> <button ng-click="dumperCounter(5)">-</button></td>
-            <td class="dumper-counter">{{dumper.west_avl}}</td>
-            <td><button ng-click="dumperCounter(6)">+</button></td>
-          </tr>
-          <tr>
-            <td>Run</td>
-            <td><button ng-click="dumperCounter(7)">-</button></td>
-            <td class="dumper-counter">{{dumper.west_run}}</td>
-            <td><button ng-click="dumperCounter(8)">+</button></td>
-          </tr>
-        </table>
-      </div> -->
-
-
-
     </div>
+  </div>
+
+
+  <div class="sec-dumper">
+    
   </div>
 
   <div class="trend-section">
